2006-02-21  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlSerializer.cs: Added option to avoid falling back to the
	interpreted serializer if the code generator fails. To be used
	in the test suite.

2006-02-16  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeData.cs: Fixed the following issues when dealing with Array
	SchemaType:
	- if a type implements IDictionary, throw a NotSupportedException
	- if a type implements ICollection, then an Add method must exist
	  which takes a single argument of a type to which the listitem type 
	  is assignable (meaning a base type or an interface that it 
	  implements). If such a method does not exist, then throw an
	  InvalidOperationException.
	- if a type implements IEnumerable, then the listitem type is 
	  determined by the type of the Current property of the (IEnumerator)
	  type returned by the GetEnumerator() method or the private 
	  implementation of IEnumerable.GetEnumerator(). If there's no 
          public Current property on the IEnumerator, then System.Object 
	  is assumed as listitem type. Similar as for types implementing
	  ICollection, an Add method must exist which takes a single argument 
          of a type to which the listitem type is assignable (meaning a base
	  type or an interface that it implements). If such a method does not
          exist, then throw an InvalidOperationException.

2006-02-16  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlSchemaImporter.cs: Support importing complex types with
	  simple content based on enums. Fixes bug #76848.

2006-02-11  Gert Driesen  <drieseng@users.sourceforge.net>

	* SoapAttributeAttribute.cs: Set eol-style to CRLF.
	* SoapElementAttribute.cs: Same.
	* SoapEnumAttribute.cs: Same.
	* SoapIncludeAttribute.cs: Same.
	* SoapSchemaMember.cs: Same.
	* SoapTypeAttribute.cs: Same.
	* XmlArrayAttribute.cs: Same.
	* XmlAttributeAttribute.cs: Same.
	* XmlChoiceIdentifierAttribute.cs: Same.
	* XmlElementAttribute.cs: Same.
	* XmlEnumAttribute.cs: Same.